# receipt-board

./: .gitignore  CLAUDE.md  MEMORY.md  README.md  alembic.ini  pyproject.toml  receipt_board.spec
.github/workflows/: ci.yml  release.yml
docs/: BACKLOG.md  GLOSSARY.md  INSTALL.md  PROJECT_BRIEF.md  TASKS.md  TECH_SESSION_AGENDA.md  TECH_SPEC.md  USER_GUIDE.md  dev-testing.md
docs/adr/: 0001-receipt-not-modeled-in-v1.md  0002-done-stored-on-every-node-with-symmetric-cascade.md  0003-external-interface-toggles-leaf-checkboxes-only.md  0004-audit-logs-one-entry-per-action-with-affected-ids.md  0005-import-is-atomic-and-validates-controlled-vocabularies.md  0006-node-type-is-explicit-inferred-only-at-import.md  0007-checklist-aggregate-with-separate-category-and-item-tables.md  0008-concurrency-one-transaction-per-action-last-write-wins.md  0009-gui-only-operations-protected-by-startup-session-token.md  0010-integer-primary-keys-instead-of-uuids.md  0011-cli-communicates-over-local-http.md  0012-gui-live-updates-via-sse.md  0013-in-app-updater-via-public-github-releases.md  README.md
gui-src/: README.md  build.mjs  index.html  package-lock.json  package.json  tsconfig.json
gui-src/src/: api.ts  app.ts  i18n.ts  icons.ts  main.ts  styles.css  theme.ts  types.ts  ui.ts  updates.ts
packaging/: entry.py  make_icon.py  receipt-board.iss
scripts/: build-installer.ps1  dev-reset.ps1
src/receipt_board/: __init__.py  __main__.py  bootstrap.py  config.py  dev_reset.py
src/receipt_board/api/: __init__.py  app.py  deps.py  errors.py  routers.py  runtime.py  schemas.py  server.py  updates.py
src/receipt_board/cli/: __init__.py  client.py  main.py
src/receipt_board/core/: __init__.py  audit.py  cascade.py  errors.py  events.py  queries.py  refs.py  services.py  tree.py  updates.py
src/receipt_board/gui/: __init__.py  launch.py  window.py
src/receipt_board/importer/: __init__.py  parser.py  service.py
src/receipt_board/persistence/: __init__.py  db.py  migrate.py  models.py  seeds.py
src/receipt_board/persistence/migrations/: env.py
src/receipt_board/persistence/migrations/versions/: 0001_initial_schema.py  0002_resource_type_metadata.py
tests/: conftest.py
tests/fixtures/: expenses_checklist_2024_v02.md  valid_checklist.md
tests/integration/: test_api.py  test_cli.py  test_events.py  test_import.py  test_migrations.py  test_server.py  test_update_api.py
tests/unit/: test_bootstrap.py  test_cascade.py  test_config_runtime.py  test_dev_reset.py  test_events.py  test_gui.py  test_importer_parser.py  test_packaging_spec.py  test_persistence.py  test_queries.py  test_services.py  test_smoke.py  test_updates.py  test_window.py
