[project]
name = "receipt-board"
version = "0.1.0"
description = "Desktop app for managing year-/month-end expense checklists."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Ilya Khanataev" }]
dependencies = [
    "alembic>=1.13",
    "sqlalchemy>=2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8",
    "pytest-cov>=5",
]

[tool.uv]
# Always use a uv-managed CPython, never a stray system interpreter
# (e.g. the one LibreOffice bundles), so the dev/CI environment is reproducible.
python-preference = "only-managed"
link-mode = "copy"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/receipt_board"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["receipt_board"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
