[project]
name = "receipt-board"
version = "0.1.0"
description = "Desktop app for managing year-/month-end expense checklists."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Ilya Khanataev" }]
dependencies = [
    "alembic>=1.13",
    "fastapi>=0.138.1",
    "httpx>=0.28.1",
    "platformdirs>=4.10.0",
    "pywebview>=6.2.1",
    "sqlalchemy>=2.0",
    "uvicorn>=0.49.0",
]

[project.scripts]
receipt-board = "receipt_board.cli.main:main"
receipt-board-app = "receipt_board.bootstrap:main"

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8",
    "pytest-cov>=5",
    "pyinstaller>=6.21.0",
]

[tool.uv]
# Always use a uv-managed CPython, never a stray system interpreter
# (e.g. the one LibreOffice bundles), so the dev/CI environment is reproducible.
python-preference = "only-managed"
link-mode = "copy"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/receipt_board"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom: Depends()/Query()/etc. in argument defaults.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["receipt_board"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
